--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             </a>
 
             <a
-              href="public/assets/schermen/wagonindelingsscherm.html"
+              href="https://www.figma.com/design/2jDPdwS682WixnVWT0lYmH/2526_PRTT_BiygereyevaDiana_Midi-prototypes-v?node-id=32-181&t=lc4ExCKHJRO3CvtG-1"
               target="_blank"
               class="px-10 py-5 text-lg font-black text-white bg-[#592E25] rounded-xl shadow-lg hover:bg-[#3C1F19] hover:shadow-2xl hover:translate-x-3 transition-all duration-300 text-center border-2 border-[#592E25]"
             >
