--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
             </a>
 
             <a
-              href="https://www.figma.com/proto/2jDPdwS682WixnVWT0lYmH/2526_PRTT_BiygereyevaDiana_Midi-prototypes-v?page-id=340%3A152&node-id=445-258&p=f&viewport=263%2C-714%2C0.38&t=I1TucDSKCdRJbqbE-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=445%3A258&show-proto-sidebar=1"
+              href="https://www.figma.com/design/2jDPdwS682WixnVWT0lYmH/2526_PRTT_BiygereyevaDiana_Midi-prototypes-v?node-id=340-152&p=f"
               target="_blank"
               class="inline-flex items-center px-12 py-6 text-lg font-black bg-[#592E25] text-white rounded-xl shadow-xl hover:bg-[#3C1F19] hover:shadow-2xl hover:translate-x-3 transition-all duration-300 text-center border-2 border-[#592E25]"
             >
