--- a/contact.html
+++ b/contact.html
@@ -247,6 +247,66 @@
       </div>
     </section>
 
+    <!-- FOOTER -->
+    <footer
+      class="px-6 py-20 bg-[#592E25] text-white relative overflow-hidden border-t-4 border-[#EAF205]"
+    >
+      <div
+        class="max-w-7xl mx-auto flex flex-wrap justify-between gap-10 relative z-10"
+      >
+        <div class="flex items-start gap-3">
+          <img
+            src="assets/Asset 14.webp"
+            alt="Map"
+            class="icon-img opacity-80"
+          />
+          <div>
+            <h3 class="text-2xl font-black mb-2">Lost in Tra(i)nslation</h3>
+            <p class="text-base font-bold text-white/90">
+              Diana Biygereyeva • 1GDM2
+            </p>
+            <p class="text-sm text-white/80 font-semibold">
+              Prototyping Tools • 2025
+            </p>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-5">
+          <a
+            class="flex items-center gap-3 hover:text-[#93A603] transition-colors duration-300 font-bold text-base"
+            target="_blank"
+            href="https://github.com/diana-biygereyeva/Projectdocumentatie"
+          >
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+              <path
+                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+              />
+            </svg>
+            GitHub Repository
+          </a>
+          <a
+            class="flex items-center gap-3 hover:text-[#EAF205] transition-colors duration-300 font-bold text-base"
+            href="assets/2526_PRTT_BiygereyevaDiana_Ontwerpdocumentatie.pdf"
+            download
+          >
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3"
+              />
+            </svg>
+            Download PDF
+          </a>
+        </div>
+      </div>
+    </footer>
+
     <script>
       // Custom cursor
       const cursor = document.getElementById("cursor");
