--- a/week 11.html
+++ b/week 11.html
@@ -305,7 +305,7 @@
       </div>
     </aside>
 
-    <!-- DOCUMENTATIE WEEK 11 -->
+    <!-- DOCUMENTATIE -->
     <main
       class="max-w-5xl mx-auto px-6 pb-20 space-y-12 text-lg leading-relaxed text-[#592E25]"
     >
@@ -713,7 +713,7 @@
           <a
             class="flex items-center gap-3 hover:text-[#93A603] transition-colors duration-300 font-bold text-base"
             target="_blank"
-            href="https://github.com/yourusername/yourrepository"
+            href="https://github.com/diana-biygereyeva/Projectdocumentatie"
           >
             <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
               <path
@@ -724,7 +724,7 @@
           </a>
           <a
             class="flex items-center gap-3 hover:text-[#EAF205] transition-colors duration-300 font-bold text-base"
-            href="/path/to/design-documentation.pdf"
+            href="assets/2526_PRTT_BiygereyevaDiana_Ontwerpdocumentatie.pdf"
             download
           >
             <svg
